# Riemannian-Embedding-Diagnostics

./: .gitignore  README.md  pyproject.toml
experiments/: benchmark_swiss_roll.py
src/geometry/: jacobian.py  tangent_estimation.py
src/metrics/: distortion.py
src/riemannian_diagnostics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/viz/: heatmaps.py
